--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/jest": "^27.0.3",
     "cross-env": "^7.0.3",
     "eslint": "^8.4.1",
+    "eslint-plugin-react": "^7.27.1",
     "jest": "^27.4.4",
     "nodemon": "^2.0.15"
   },
